# cquid

./: .gitignore  CMakeLists.txt  README.md
cquidClient/: CMakeLists.txt  main.cpp
cquidNetworking/: CMakeLists.txt
cquidNetworking/include/cquidNetworking/: TCPConnection.h  TCPServer.h
cquidNetworking/src/: TCPConnection.cpp  TCPServer.cpp  base.cpp
cquidServer/: CMakeLists.txt  main.cpp
